--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  overflow: hidden;
+  position: relative;
+  background-color: rgb(20,20,20);
+  font-family: 'Courier New', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,3 +13,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.forward-enter, .forward-exit, .back-enter, .back-exit {
+  position: absolute !important;
+  top: 0;
+  width: 100%;
+}
+
+.router-wrapper {
+  overflow: hidden;
+}
+
+.forward-enter {
+  z-index: 2;
+  opacity: 0;
+  transform: translateY(100%);
+}
+
+.forward-enter-active {
+  z-index: 2;
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 500ms;
+}
+
+.forward-exit {
+  z-index: 1;
+  opacity: 1;
+}
+
+.forward-exit-active {
+  z-index: 1;
+  opacity: .3;
+  transition: all 500ms;
+}
+
+.back-enter {
+  z-index: 1;
+  opacity: .3;
+}
+
+.back-enter-active {
+  z-index: 1;
+  opacity: 1;
+  transition: all 500ms;
+}
+
+.back-exit {
+  z-index: 2;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.back-exit-active {
+  z-index: 2;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: all 500ms;
+}
+
